# matrix-rust-rtc

./: .gitignore  AGENT-WORKFLOW.md  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Makefile  README.md
.github/workflows/: build-mobile.yml
crates/matrix-rtc-core/: Cargo.toml
crates/matrix-rtc-core/src/: commands.rs  error.rs  event.rs  join.rs  keepalive.rs  lib.rs  machine.rs  manager.rs  own_membership.rs  session.rs  transport.rs
crates/matrix-rtc-core/src/encryption/: mod.rs  types.rs
crates/matrix-rtc-ffi/: Cargo.toml
crates/matrix-rtc-ffi/src/: commands.rs  lib.rs
crates/matrix-rtc-wasm/: Cargo.toml
crates/matrix-rtc-wasm/src/: commands.rs  lib.rs
mobile/: PACKAGING.md  README.md
mobile/android/: build.gradle  gradlew  settings.gradle
mobile/android/gradle/wrapper/: gradle-wrapper.properties
mobile/android/matrixrtc/: build.gradle  consumer-rules.pro  proguard-rules.pro
mobile/android/matrixrtc/src/main/: AndroidManifest.xml
mobile/android/matrixrtc/src/test/kotlin/: README.md
mobile/ios/: MatrixRtcFFI.swift  Package.swift
mobile/ios/Tests/: MatrixRtcFFITests.swift
scripts/: build-android-aar.sh  build-ios-xcframework.sh  build-mobile.sh  quickstart.sh
skills/create-pr/: SKILL.md
skills/e2e-testing/: SKILL.md
skills/e2e-testing/references/: Alice-Bob-Call-Events.md
skills/msc/: SKILL.md
skills/msc/references/: msc4143.md  msc4195.md  msc4354.md
skills/review-pr/: SKILL.md
skills/rust-pro/: SKILL.md
skills/self-review/: SKILL.md
src/: lib.rs  machine.rs  session.rs  store.rs  types.rs
uniffi-bindgen/: Cargo.toml
uniffi-bindgen/src/: main.rs
web/: .gitignore  README.md  package-lock.json  package.json  vitest.config.js
web/scripts/: build-bindings.sh
web/test/: generated-bindings.test.mjs  join-feature.test.mjs  package-exports.test.mjs  rtc-manager-real-world.test.mjs
