[package]
name = "matrix-rtc-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
matrix-rtc-core = { path = "../matrix-rtc-core" }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
serde.workspace = true

