[package]
name = "matrix-rtc-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
matrix-rtc-core = { path = "../matrix-rtc-core" }
thiserror.workspace = true
tokio.workspace = true
uniffi.workspace = true

[dev-dependencies]


