# Copyright 2026 Valere Fedronic
#
# This file is part of matrix-rust-rtc.
#
# matrix-rust-rtc is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# matrix-rust-rtc is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with matrix-rust-rtc.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "matrix-rtc-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
matrix-rtc-core = { path = "../matrix-rtc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
uniffi.workspace = true
async-trait.workspace = true
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util"] }


