# Copyright 2026 Valere Fedronic
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under
# the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
# OF ANY KIND, either express or implied. See the License for the specific
# language governing permissions and limitations under the License.

[package]
name = "matrix-rtc-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
matrix-rtc-core = { path = "../matrix-rtc-core" }
serde.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
wasm-bindgen-test.workspace = true

